Contexto, Migraciones, Notaciones
(falta implementar la interfaz IRepositorio para base de datos)

--- a/ObligatorioDDA2/ObligatorioDDA2/appsettings.json
+++ b/ObligatorioDDA2/ObligatorioDDA2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-3MHID5U\\SQLEXPRESS;Initial Catalog=prueba;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
