--- a/ObligatorioDDA2/TestLogic/TestLogic.csproj
+++ b/ObligatorioDDA2/TestLogic/TestLogic.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ObligatorioDDA2\ObligatorioDDA2.csproj" />
+    <ProjectReference Include="..\ObligatorioDDA2\WebApi.csproj" />
   </ItemGroup>
 
 </Project>
