--- a/ObligatorioDDA2/ObligatorioDDA2/WebApi.csproj
+++ b/ObligatorioDDA2/ObligatorioDDA2/WebApi.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
