--- a/ObligatorioDDA2/ObligatorioDDA2/Properties/launchSettings.json
+++ b/ObligatorioDDA2/ObligatorioDDA2/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Regiones",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "ObligatorioDDA2": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "Regiones",
+      "launchUrl": "",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
